# schema-doc-gen

./: LICENSE  README.md  pyproject.toml
schema_doc_gen/: __init__.py  __main__.py  schema_doc_gen.py
