[project]
name = "schema-doc-gen"
authors = [{name = "Jacob Wilkins", email = "jacob.wilkins@stfc.ac.uk"}]
dynamic = ["version"]
description = "Generate docs from a python Schema through a simplified interface."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jsonschema-markdown>=2025.11.0",
    "schema>=0.7.8",
]

license = {text = "MIT"}


classifiers = [
  "Development Status :: 3 - Alpha",
  "Topic :: File Formats :: JSON :: JSON Schema",
  "Topic :: Documentation",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = ["pytest==8.3.4"]
lint = ["ruff", "ty"]

[project.scripts]
schema_doc_gen = "schema_doc_gen.schema_doc_gen:main"

[tool.setuptools.dynamic]
version = {attr = "schema_doc_gen.__version__"}

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
preview = true
select = [
    "PL",  # Pylint
    "E",   # Pycodestyle
    "W",   # Pycodestyle warnings
    "F",   # Pyflakes
    "B",   # Flake8 bugbear
    "SIM", # Flake8 Simplify
    "A",   # Flake8 builtins
    "COM", # Flake8 commas
    "ISC", # Flake8 implicit string concat
    "RSE", # Flake8 raise
    "FA",  # Flake8 future
    "FBT", # Flake8 boolean trap
    "C4",  # Flake8 comprehensions
    "Q",   # Flake8 Quotes
    "RET", # Flake8 return
    "ARG", # Flake8 unused args
    "PTH", # Flake8 use pathlib
    "YTT", # Flake8 2020
    "ANN", # Flake8 annotations
    "BLE", # Flake8 Blind except
    "C4",  # Flake8 comprehensions
    "T10", # Flake8 debugger statements
    "FIX", # Flake8 Fixme
    "LOG", # Flake8 Logging
    "G",   # Flake8 Logging format
    "PIE", # Flake8 Pie
    "I",   # Isort
    "PERF",# Perflint
    "RUF", # Ruff specific
    "FURB",# Refurb
    "PERF",# Perflint
    "D",   # Pydocstyle
    "DOC", # Pydoclint
    "UP",  # Pyupgrade
]
ignore = [
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0914",  # Too many locals
    "PLR0915",  # Too many statements
    "PLW0603",  # global used.
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.isort]
profile = "black"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",
    "SA01",
    "ES01",
]
# remember to use single quotes for regex in TOML
exclude = [  # don't report on objects that match any of these regex
    '\.undocumented_method$',
    '\.__[^.]*__$',
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
    '^Assess ',
    '^Access ',
    '^Class ',
]
